Creacion de la version 2

--- a/Api/appsettings.json
+++ b/Api/appsettings.json
@@ -11,7 +11,7 @@
     "DBConection": "Server=PC-EDWARD;Database=DBLogs;User ID=dbloguser;Password=dbloguser;Trust Server Certificate=true"
   },
   "urlDescuentos": "https://66cde6658ca9aa6c8ccc1cec.mockapi.io/",
-  "RutaLogTiempo": "Log/",
+  "RutaLogTiempo": "D:/code/PruebaNet/Api/Log/",
   "ArchivoLogTiempo": "log.txt",
   "TiempoMinutosCache": 1
 }
